...
    //MARK: - Properties
    var indexPath: IndexPath?
    weak var delegate: CartCollectionCellInterface?
    
    //MARK: - UI Elements
    private lazy var productImage = CustomImageView(image: UIImage(systemName: "exclamationmark.circle"), contentMode: .scaleAspectFit)
    private lazy var productTitle = TitleLabel(fontSize: 15, textColor: .black, numberOfLines: 0)
    private lazy var removeButton = CustomButton(bgColor: .clear, color: .gray, systemImageName: "trash")
    private lazy var titleAndRemovHstack = CustomStackView(axis: .horizontal, alignment: .center)
    private lazy var categoryLabel = TitleLabel(fontSize: 12, textColor: .gray, numberOfLines: 1)
    private lazy var priceLabel = TitleLabel(fontSize: 18, textColor: .black)
    private lazy var stepperPlusButton = CustomButton(bgColor: .systemGray3, color: .black, systemImageName: "plus", cornerStyle: .capsule)
    lazy var stepperLabel = TitleLabel(fontSize: 15, textAlignment: .center, textColor: .black)
...
